cncf/cert-manager/party-clippy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bjdcsa-ingress
  namespace: ingress-nginx
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
   kubernetes.io/ingress.class: nginx
   kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - clippy.bjdcsa.cloud
    secretName: clippy-bjdcsa-cloud-tls
  rules:
  - host: clippy.bjdcsa.cloud
    http:
     paths:
     - backend:
        serviceName: party-clippy
        servicePort: 80
